修复JPA版本兼容性BUG